start making the change for bookeo, online booking system and gutschein system intergration

--- a/projs/batchfield/app/index-bookeo.html
+++ b/projs/batchfield/app/index-bookeo.html
@@ -48,7 +48,7 @@ fbq('track', 'ViewContent');
 <body class="landing">
 
 
-<!-- <div id="share"></div> -->
+
 
 
 
@@ -220,6 +220,12 @@ fbq('track', 'ViewContent');
 <div style="height:105px"></div>
 
 
+
+
+<!-- bookeo booking block -->
+<!-- <script type="text/javascript" src="https://bookeo.com/widget.js?a=3254JANFLR15D3B8ACAED"></script>           --> 
+
+<script type="text/javascript" src="https://bookeo.com/widget.js?a=3254JANFLR15D3B8ACAED&type=3254LFTXN615D3B92802E&option_TYPE_OF_SERVICE=MPUYTXEN"></script>
 
 
 
