add book-now button on every pages

--- a/projs/batchfield/app/kontakt/index.html
+++ b/projs/batchfield/app/kontakt/index.html
@@ -161,6 +161,7 @@ fbq('track', 'ViewContent');
         <li><a href="termine_buchen.html" class="waves-effect waves-blue termin-button">Termine<span class="fa fa-calendar"></span></a></li>
       -->
        <li><a href="/images/gutschein.png" target="_blank" class="waves-effect waves-blue">Gutschein<span class="fa fa-gift"></span></a></li>
+<li><a href="/online-booking/book-now.html" class="waves-effect waves-blue">Book now<span class="fa fa-calendar"></span></a></li>
       </ul>
 
 
