add owl carousel, ready to trobleshoot of how to match jquery and react

--- a/projs/batchfield-react/public/index.html
+++ b/projs/batchfield-react/public/index.html
@@ -17,6 +17,7 @@
 
 
 
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -40,11 +41,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
-
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
     <script src="path/to/your/bundle.js"></script>
+    <script src="./assets/js/owl.carousel.js"></script>
+  
+
+   
   </body>
 </html>
 
