ready to mess up the codebase and package json for installing next.js

--- a/projs/batchfield-react/public/index.html
+++ b/projs/batchfield-react/public/index.html
@@ -31,6 +31,7 @@
     <title>React App</title>
   </head>
   <body>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,12 +40,20 @@
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
 
+
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+
+
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
     <script src="path/to/your/bundle.js"></script>
+<div id="bookingKitContainer"></div>
+<script src="https://eu5.bookingkit.de/bkscript.js.php?e=dbff370099366bf2b108652bc1727321"></script>
+
+
   
 
    
