implement bookig kit system and hide the original detail page_intro section

--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_babybauchfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_babybauchfotograf_rosenheim.html
@@ -47,19 +47,6 @@ fbq('track', 'ViewContent');
 <body>
 
 
-<div class="section preloader-big-wrapper valign-wrapper">
-  <div class="preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue-only">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 
@@ -115,7 +102,7 @@ fbq('track', 'ViewContent');
 
 
 
-<div class="section shadow_divider">
+<section class="section shadow_divider fotoshoting_detail_page_intro">
   <div class="container center topic_detail fixed_width">
     <div class="row">
      
@@ -162,7 +149,7 @@ fbq('track', 'ViewContent');
       </div>
    </div><!--row-->
   </div><!-- class="container topic_detail"-->
-</div><!--section-->
+</section><!--section-->
 
 
 
@@ -170,6 +157,15 @@ fbq('track', 'ViewContent');
 
 
 
+
+
+
+<!-- bookingkit section -->
+<section class="bookingkit_section">
+	<div class="container">
+		<div id="bookingKitContainer"></div>
+	</div>
+</section> <!-- bookingkit section -->
 
 
 
@@ -304,9 +300,11 @@ fbq('track', 'ViewContent');
   <script src="/scripts/owl.carousel.js"></script>
   <script src="/scripts/initial.js"></script>
   <script src="/scripts/google-webfont.js"></script>
-
 <!-- endbuild -->
 
+
+<!-- bookingkit script -->
+<script src="https://eu5.bookingkit.de/bkscript.js.php?e=8acb2520cac387a3b3cbfe830a8ff593&lang=de&t=Default"></script>
 
 
 
