--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_kidsfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_kidsfotograf_rosenheim.html
@@ -47,19 +47,7 @@ fbq('track', 'ViewContent');
 <body>
 
 
-<div class="section preloader-big-wrapper valign-wrapper">
-  <div class="preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue-only">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 
 
@@ -128,7 +116,7 @@ fbq('track', 'ViewContent');
 
 
 
-<div class="section shadow_divider">
+<section class="section shadow_divider fotoshoting_detail_page_intro">
   <div class="container center topic_detail fixed_width">
     <div class="row">
      
@@ -169,7 +157,7 @@ fbq('track', 'ViewContent');
       </div>
    </div><!--row-->
   </div><!-- class="container topic_detail"-->
-</div><!--section-->
+</section><!--section-->
 
 
 
@@ -177,6 +165,15 @@ fbq('track', 'ViewContent');
 
 
 
+
+
+
+<!-- bookingkit section -->
+<section class="bookingkit_section">
+	<div class="container">
+		<div id="bookingKitContainer"></div>
+	</div>
+</section> <!-- bookingkit section -->
 
 
 
@@ -311,8 +308,11 @@ fbq('track', 'ViewContent');
   <script src="/scripts/owl.carousel.js"></script>
   <script src="/scripts/initial.js"></script>
   <script src="/scripts/google-webfont.js"></script>
-
 <!-- endbuild -->
+
+
+<!-- bookingkit script -->
+<script src="https://eu5.bookingkit.de/bkscript.js.php?e=bab6030405d20e1e2be00277c8873c3b&lang=de&t=Default"></script>
 
 
 
