--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_passfotorosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_passfotorosenheim.html
@@ -47,19 +47,6 @@ fbq('track', 'ViewContent');
 <body>
 
 
-<div class="section preloader-big-wrapper valign-wrapper">
-  <div class="preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue-only">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
-</div>
 
 
   <nav class="section nav_bar_very_top baby_detail" id="otherpages_top_nav"></nav>
@@ -94,31 +81,9 @@ fbq('track', 'ViewContent');
 -->
 
 
-<div class="owl-carousel">
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_01.jpg" alt="batchfield fotograf rosenheim passfoto 01"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_02.jpg" alt="batchfield fotograf rosenheim passfoto 02"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_03.jpg" alt="batchfield fotograf rosenheim passfoto 03"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_04.jpg" alt="batchfield fotograf rosenheim passfoto 04"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_05.jpg" alt="batchfield fotograf rosenheim passfoto 05"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_06.jpg" alt="batchfield fotograf rosenheim passfoto 06"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_07.jpg" alt="batchfield fotograf rosenheim passfoto 07"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_08.jpg" alt="batchfield fotograf rosenheim passfoto 08"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_09.jpg" alt="batchfield fotograf rosenheim passfoto 09"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_10.jpg" alt="batchfield fotograf rosenheim passfoto 10"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_11.jpg" alt="batchfield fotograf rosenheim passfoto 11"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_12.jpg" alt="batchfield fotograf rosenheim passfoto 12"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_13.jpg" alt="batchfield fotograf rosenheim passfoto 13"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_14.jpg" alt="batchfield fotograf rosenheim passfoto 14"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_15.jpg" alt="batchfield fotograf rosenheim passfoto 15"></div>
-    <div class="item"><img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_16.jpg" alt="batchfield fotograf rosenheim passfoto 16"></div>
-</div>
 
 
-
-
-
-
-<div class="section shadow_divider">
+<section class="section shadow_divider fotoshoting_detail_page_intro">
   <div class="container center topic_detail fixed_width">
     <div class="row">
      
@@ -159,7 +124,18 @@ fbq('track', 'ViewContent');
       </div>
    </div><!--row-->
   </div><!-- class="container topic_detail"-->
-</div><!--section-->
+</section><!--section-->
+
+
+
+
+
+<!-- bookingkit section -->
+<section class="bookingkit_section">
+  <div class="container">
+    <div id="bookingKitContainer"></div>
+  </div>
+</section> <!-- bookingkit section -->
 
 
 
@@ -255,9 +231,11 @@ fbq('track', 'ViewContent');
   <script src="/scripts/owl.carousel.js"></script>
   <script src="/scripts/initial.js"></script>
   <script src="/scripts/google-webfont.js"></script>
-
 <!-- endbuild -->
 
+
+<!-- bookingkit script -->
+<script src="https://eu5.bookingkit.de/bkscript.js.php?e=d5b99847591b99230b6a6e87ec3f1141&lang=de&t=Default"></script>
 
 
 
