--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_valentinstag_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_valentinstag_rosenheim.html
@@ -47,19 +47,7 @@ fbq('track', 'ViewContent');
 <body class="valentines_day">
 
 
-<div class="section preloader-big-wrapper valign-wrapper">
-  <div class="preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue-only">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 
 
@@ -117,7 +105,7 @@ Das schönste ist Zeit miteinander zu verbringen</br>ihr könnt etwas ganz beson
 
 
 
-<div class="section shadow_divider detail_description">
+<section class="section shadow_divider detail_description fotoshoting_detail_page_intro">
   <div class="container center topic_detail fixed_width">
     <div class="row">
      
@@ -160,7 +148,7 @@ Das schönste ist Zeit miteinander zu verbringen</br>ihr könnt etwas ganz beson
       </div>
    </div><!--row-->
   </div><!-- class="container topic_detail"-->
-</div><!--section-->
+</section><!--section-->
 
 
 
