--- a/projs/batchfield/app/online-booking/book-now.html
+++ b/projs/batchfield/app/online-booking/book-now.html
@@ -53,26 +53,6 @@ fbq('track', 'ViewContent');
 
 
 
-
-<!-- <div class="section preloader-big-wrapper valign-wrapper">
-  <div class="preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue-only">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
-</div> -->
-
-
-
-
-
-
   <nav class="section nav_bar_very_top">
        <div class="container">
         <p>
@@ -222,10 +202,12 @@ fbq('track', 'ViewContent');
 <div style="height:105px"></div>
 
 
-<div class="container">
-  <!-- bookeo booking block -->  
-<script type="text/javascript" src="https://bookeo.com/widget.js?a=3254JANFLR15D3B8ACAED"></script>
-</div>
+<!--  START OF bookingkit block -->  
+
+<div class="container">  
+    <div id="bookingKitContainer"></div>
+</div> 
+<!--  END OF bookingkit block -->  
 
 
 
@@ -343,6 +325,11 @@ fbq('track', 'ViewContent');
   <script src="/scripts/jssocials/jssocials_activate.js"></script> -->
 <!-- endbuild -->
   
+
+
+  
+<!-- bookingkit script -->
+  <script src="https://eu5.bookingkit.de/bkscript.js.php?v=8773e446775d3a50b984f4b3313d5a29&lang=de&t=Default"></script>
 
 
 
