--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_bewerbungsbilder_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_bewerbungsbilder_rosenheim.html
@@ -47,20 +47,6 @@ fbq('track', 'ViewContent');
 <body>
 
 
-<div class="section preloader-big-wrapper valign-wrapper">
-  <div class="preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue-only">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
-</div>
-
 
 
   <nav class="section nav_bar_very_top baby_detail" id="otherpages_top_nav"></nav>
@@ -123,7 +109,7 @@ fbq('track', 'ViewContent');
 
 
 
-<div class="section shadow_divider">
+<section class="section shadow_divider fotoshoting_detail_page_intro">
   <div class="container center topic_detail fixed_width">
     <div class="row">
      
@@ -166,7 +152,7 @@ Viel Erfolg!</p>
       </div>
    </div><!--row-->
   </div><!-- class="container topic_detail"-->
-</div><!--section-->
+</section><!--section-->
 
 
 
@@ -174,7 +160,16 @@ Viel Erfolg!</p>
 
 
 
-<!-- 
+
+
+
+<!-- bookingkit section -->
+<section class="bookingkit_section">
+	<div class="container">
+		<div id="bookingKitContainer"></div>
+	</div>
+</section> <!-- bookingkit section -->
+
 
 
 <div class="section paketpreis shadow_divider" id="paketpreis">
@@ -284,8 +279,11 @@ Viel Erfolg!</p>
   <script src="/scripts/owl.carousel.js"></script>
   <script src="/scripts/initial.js"></script>
   <script src="/scripts/google-webfont.js"></script>
-
 <!-- endbuild -->
+
+
+<!-- bookingkit script -->
+<script src="https://eu5.bookingkit.de/bkscript.js.php?e=9561c86ef2aeab7d54f6e64557586e61&lang=de&t=Default"></script>
 
 
 
