--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_paerchenfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_paerchenfotograf_rosenheim.html
@@ -47,19 +47,7 @@ fbq('track', 'ViewContent');
 <body>
 
 
-<div class="section preloader-big-wrapper valign-wrapper">
-  <div class="preloader-wrapper big active">
-    <div class="spinner-layer spinner-blue-only">
-      <div class="circle-clipper left">
-        <div class="circle"></div>
-      </div><div class="gap-patch">
-        <div class="circle"></div>
-      </div><div class="circle-clipper right">
-        <div class="circle"></div>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 
 
@@ -125,7 +113,7 @@ fbq('track', 'ViewContent');
 
 
 
-<div class="section shadow_divider">
+<section class="section shadow_divider fotoshoting_detail_page_intro">
   <div class="container center topic_detail fixed_width">
     <div class="row">
      
@@ -167,7 +155,7 @@ fbq('track', 'ViewContent');
       </div>
    </div><!--row-->
   </div><!-- class="container topic_detail"-->
-</div><!--section-->
+</section><!--section-->
 
 
 
@@ -175,6 +163,15 @@ fbq('track', 'ViewContent');
 
 
 
+
+
+
+<!-- bookingkit section -->
+<section class="bookingkit_section">
+	<div class="container">
+		<div id="bookingKitContainer"></div>
+	</div>
+</section> <!-- bookingkit section -->
 
 
 
@@ -315,10 +312,10 @@ fbq('track', 'ViewContent');
   <script src="/scripts/owl.carousel.js"></script>
   <script src="/scripts/initial.js"></script>
   <script src="/scripts/google-webfont.js"></script>
-
 <!-- endbuild -->
 
-
+<!-- bookingkit script -->
+<script src="https://eu5.bookingkit.de/bkscript.js.php?e=02331dcc7c053577e6606b7d4003e8b9&lang=de&t=Default"></script>
 
 
 </body>
