--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_babybauchfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_babybauchfotograf_rosenheim.html
@@ -48,6 +48,66 @@ fbq('track', 'ViewContent');
 
 
 
+<style>
+  #bookingKitContainer{
+     /*display: none; */
+     padding:0px !important;
+  }
+
+  .bk-detail-description,.bk-detail-images,.bk-detail-informations,.bk-detail-price.alphaColor,.bk-date-btn.alphaBg.bk-scroll-to-cal{
+    display:none;
+  }
+
+
+  .bk-detail-mini-description{
+
+  }
+
+  .bk-date-btn.alphaBg.bk-scroll-to-cal,
+  .bk-detail-mini-description,
+  .bk-detail-cal,
+  .bk-detail-highlight-line{
+    display:none !important;
+  }
+
+  .bk-detail-highlights.widgetBg ul{
+    display:none! important;
+  }
+
+
+  .bk-voucher-btn.betaBg{
+    display:initial;
+  }
+
+
+
+  .bk-checkout-footer{
+    display:none;
+  }
+
+
+
+  /*gutschine button*/
+  .bookingkit_gutschine_button_wrapper{
+    padding:0px !important;
+  }
+
+  #bookingKitContainer .bk-detail-highlights{
+    width:100%;
+    padding:0;
+  }
+  
+  #bookingKitContainer .bk-voucher-btn{
+    margin:0;
+    overflow:none;
+  }
+
+
+
+
+</style>
+
+
 
 
   <nav class="section nav_bar_very_top baby_detail" id="otherpages_top_nav"></nav>
@@ -144,7 +204,10 @@ fbq('track', 'ViewContent');
             <li>Ca. 60 Minuten solltest du für das Shooting und die anschließende Fotoauswahl einplanen.</li>
             <li>Direkt nach deinem Fotoshooting wählst du deine Lieblingsbilder aus bis zu 100 Fotos aus.</li>
             <li>Optional: Ein professionelles MakeUp kannst du für 35€ dazubuchen.</li>
-            <li class="last center" id="last_bullet_links"></li>
+            <li class="last center" id="last_bullet_links">
+                <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;uns anrufen</a>
+                <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+            </li>
           </ul>  
       </div>
    </div><!--row-->
@@ -161,11 +224,13 @@ fbq('track', 'ViewContent');
 
 
 <!-- bookingkit section -->
-<section class="bookingkit_section">
+<!-- <section class="bookingkit_section">
 	<div class="container">
 		<div id="bookingKitContainer"></div>
 	</div>
-</section> <!-- bookingkit section -->
+</section>  -->
+<!-- bookingkit section -->
+
 
 
 
@@ -305,6 +370,9 @@ fbq('track', 'ViewContent');
 
 <!-- bookingkit script -->
 <script src="https://eu5.bookingkit.de/bkscript.js.php?e=8acb2520cac387a3b3cbfe830a8ff593&lang=de&t=Default"></script>
+
+
+
 
 
 
