over writting bookingkit system css code, only let online gutschine to be visible.

--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_babybauchfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_babybauchfotograf_rosenheim.html
@@ -47,69 +47,6 @@ fbq('track', 'ViewContent');
 <body>
 
 
-
-<style>
-  #bookingKitContainer{
-     /*display: none; */
-     padding:0px !important;
-  }
-
-  .bk-detail-description,.bk-detail-images,.bk-detail-informations,.bk-detail-price.alphaColor,.bk-date-btn.alphaBg.bk-scroll-to-cal{
-    display:none;
-  }
-
-
-  .bk-detail-mini-description{
-
-  }
-
-  .bk-date-btn.alphaBg.bk-scroll-to-cal,
-  .bk-detail-mini-description,
-  .bk-detail-cal,
-  .bk-detail-highlight-line{
-    display:none !important;
-  }
-
-  .bk-detail-highlights.widgetBg ul{
-    display:none! important;
-  }
-
-
-  .bk-voucher-btn.betaBg{
-    display:initial;
-  }
-
-
-
-  .bk-checkout-footer{
-    display:none;
-  }
-
-
-
-  /*gutschine button*/
-  .bookingkit_gutschine_button_wrapper{
-    padding:0px !important;
-  }
-
-  #bookingKitContainer .bk-detail-highlights{
-    width:100%;
-    padding:0;
-  }
-  
-  #bookingKitContainer .bk-voucher-btn{
-    margin:0;
-    overflow:none;
-  }
-
-
-
-
-</style>
-
-
-
-
   <nav class="section nav_bar_very_top baby_detail" id="otherpages_top_nav"></nav>
 
 
@@ -205,9 +142,9 @@ fbq('track', 'ViewContent');
             <li>Direkt nach deinem Fotoshooting wählst du deine Lieblingsbilder aus bis zu 100 Fotos aus.</li>
             <li>Optional: Ein professionelles MakeUp kannst du für 35€ dazubuchen.</li>
             <li class="last center" id="last_bullet_links">
-                <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;uns anrufen</a>
-                <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
-            </li>
+    <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+</li>
           </ul>  
       </div>
    </div><!--row-->
