--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_bewerbungsbilder_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_bewerbungsbilder_rosenheim.html
@@ -147,7 +147,10 @@ Viel Erfolg!</p>
             <li>Ca. 30 Minuten solltest Du für das Bewerbungsbilder Shooting und Deine Bildauswahl einplanen.</li>
             <li>Bei uns gibt es keine Abnahmeverpflichtung! Du hast die Wahl – bestelle nur die Fotos, die Du wirklich haben möchtest.</li>
             <li>Als Schüler oder Student bekommst Du deine Bewerbungsbilder bereits zum Sonderpreis von 29€</li>
-            <li class="last center" id="last_bullet_links"></li>
+            <li class="last center" id="last_bullet_links">
+    <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+</li>
           </ul>  
       </div>
    </div><!--row-->
