--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_erotikfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_erotikfotograf_rosenheim.html
@@ -141,7 +141,10 @@ fbq('track', 'ViewContent');
             <li>Du darfst dich so oft umziehen wie du möchtest. Bringe bitte mindestens 3 outfits mit.</li>
             <li>Ca. 60 Minuten solltest du für das Shooting und die anschließende Fotoauswahl einplanen.</li>
             <li>Direkt nach deinem Erotik Fotoshooting wählst du deine Lieblingsbilder aus bis zu 100 Fotos aus.</li>
-            <li class="last center" id="last_bullet_links"></li>
+            <li class="last center" id="last_bullet_links">
+    <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+</li>
           </ul>  
       </div>
    </div><!--row-->
