--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_kidsfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_kidsfotograf_rosenheim.html
@@ -152,7 +152,10 @@ fbq('track', 'ViewContent');
             <li>Für das Shooting und die anschließende Fotoauswahl plant bitte ca. 60 Minuten ein.</li>
             <li>Schon gespannt auf die Fotos? Na klar, deshalb sucht ihr eure Lieblingsfotos aus bis zu 60 Fotos direkt nach dem Shooting aus.</li>
             <li>Ab 6 Kids aus einer Familie kostet das Fotoshooting 59€</li>
-            <li class="last center" id="last_bullet_links"></li>
+            <li class="last center" id="last_bullet_links">
+    <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+</li>
           </ul>  
       </div>
    </div><!--row-->
