--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_passfotorosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_passfotorosenheim.html
@@ -119,7 +119,10 @@ fbq('track', 'ViewContent');
             <li>In nur 10 Minuten zum perfekten Passfoto.</li>
             <li>Bei uns gibt es keine Abnahmeverpflichtung! Du hast die Wahl – bestelle nur die Fotos, die Du wirklich haben möchtest.</li>
           
-            <li class="last center" id="last_bullet_links"></li>
+            <li class="last center" id="last_bullet_links">
+    <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+</li>
           </ul>  
       </div>
    </div><!--row-->
