--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_besfriendsfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_besfriendsfotograf_rosenheim.html
@@ -151,7 +151,10 @@ fbq('track', 'ViewContent');
             <li>Direkt nach eurem Fotoshooting wählt ihr eure Lieblingsbilder aus bis zu 100 Fotos aus.</li>
             <li>Ab 6 Personen kostet das Fotoshooting 59€</li>
             <li>Optional: Professionelles MakeUp für 35€ pro Person dazubuchen.</li>
-            <li class="last center" id="last_bullet_links"></li>
+            <li class="last center" id="last_bullet_links">
+    <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+</li>
           </ul>  
       </div>
    </div><!--row-->
