--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_mydayrosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_mydayrosenheim.html
@@ -156,7 +156,10 @@ fbq('track', 'ViewContent');
             <li>Du darfst Dich so oft umziehen wie Du möchtest. Bringe bitte mindestens 3 Outfits mit.</li>
           
             
-            <li class="last center" id="last_bullet_links"></li>
+            <li class="last center" id="last_bullet_links">
+    <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+</li>
           </ul>  
       </div>
    </div><!--row-->
