--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_sedcardrosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_sedcardrosenheim.html
@@ -141,7 +141,10 @@ fbq('track', 'ViewContent');
             <li>Ca. 60 Minuten solltet ihr für das Familien Shooting und eure Bildauswahl einplanen.</li>
             <li>Bei uns gibt es keine Abnahmeverpflichtung! Ihr habt die Wahl – bestellst nur die Fotos, die ihr wirklich haben möchtet.</li>
             <li>Ab 7 Personen kostet das Fotoshooting 59€</li>
-            <li class="last center" id="last_bullet_links"></li>
+            <li class="last center" id="last_bullet_links">
+    <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+</li>
           </ul>  
       </div>
    </div><!--row-->
