--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_valentinstagfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_valentinstagfotograf_rosenheim.html
@@ -139,7 +139,10 @@ fbq('track', 'ViewContent');
             <li>Ihr dürft euch so oft umziehen wie ihr möchtet. Wir empfehlen mindestens 3 outfits pro Person.</li>
             <li>Ca. 60 Minuten solltet ihr für das Shooting und die anschließende Fotoauswahl einplanen.</li>
             <li>Direkt nach eurem Fotoshooting wählt ihr eure Lieblingsbilder aus bis zu 100 Fotos aus.</li>
-            <li class="last center" id="last_bullet_links"></li>
+            <li class="last center" id="last_bullet_links">
+    <a href="tel:+49-8031-8878777" class="button">&nbsp;&nbsp;&nbsp;UNS ANRUFEN</a>
+    <div  class="button bookingkit_gutschine_button_wrapper"><div id="bookingKitContainer"></div></div>
+</li>
           </ul>  
       </div>
    </div><!--row-->
