--- a/projs/batchfield/app/index.html
+++ b/projs/batchfield/app/index.html
@@ -104,7 +104,7 @@ fbq('track', 'ViewContent');
         <!--
         <li><a href="termine_buchen.html" class="waves-effect waves-blue termin-button">Termine</a></li>
         -->
-        <li><a href="/images/gutschein.png" target="_blank" class="waves-effect waves-blue">Gutschein</a></li>
+        <li><a href="/online_gutschein/online_gutschein.html" class="waves-effect waves-blue">Gutschein</a></li>
 
 <!--
         <li>
@@ -162,8 +162,8 @@ fbq('track', 'ViewContent');
             <!--
         <li><a href="termine_buchen.html" class="waves-effect waves-blue termin-button">Termine<span class="fa fa-calendar"></span></a></li>
       -->
-       <li><a href="/images/gutschein.png" target="_blank" class="waves-effect waves-blue">Gutschein<span class="fa fa-gift"></span></a></li>
-<li><a href="/online-booking/book-now.html" class="waves-effect waves-blue">Book now<span class="fa fa-calendar"></span></a></li>
+       <li class="online-gutschein-button"><a href="/online_gutschein/online_gutschein.html" class="waves-effect waves-blue">Gutschein<span class="fa fa-gift"></span></a></li>
+       <!--<li><a href="/online-booking/book-now.html" class="waves-effect waves-blue">Book now<span class="fa fa-calendar"></span></a></li>-->
 
   
 
