--- a/projs/batchfield/app/online_gutschein/online_gutschein.html
+++ b/projs/batchfield/app/online_gutschein/online_gutschein.html
@@ -45,7 +45,7 @@ src="https://www.facebook.com/tr?id=1175635469115950&ev=PageView&noscript=1"
 <script>
 fbq('track', 'ViewContent');
 </script>
-<body class="landing">
+<body class="online-gutschein-overview-page">
 
 
 
@@ -84,7 +84,7 @@ fbq('track', 'ViewContent');
         <!--
         <li><a href="termine_buchen.html" class="waves-effect waves-blue termin-button">Termine</a></li>
         -->
-        <li><a href="/images/gutschein.png" target="_blank" class="waves-effect waves-blue">Gutschein</a></li>
+        <li><a href="/online_gutschein/online_gutschein.html" class="waves-effect waves-blue">Gutschein</a></li>
 
 <!--
         <li>
@@ -142,8 +142,8 @@ fbq('track', 'ViewContent');
             <!--
         <li><a href="termine_buchen.html" class="waves-effect waves-blue termin-button">Termine<span class="fa fa-calendar"></span></a></li>
       -->
-       <li><a href="/images/gutschein.png" target="_blank" class="waves-effect waves-blue">Gutschein<span class="fa fa-gift"></span></a></li>
-<li><a href="/online-booking/book-now.html" class="waves-effect waves-blue">Book now<span class="fa fa-calendar"></span></a></li>
+       <li class="online-gutschein-button"><a href="/online_gutschein/online_gutschein.html" class="waves-effect waves-blue">Gutschein<span class="fa fa-gift"></span></a></li>
+<!--<li><a href="/online-booking/book-now.html" class="waves-effect waves-blue">Book now<span class="fa fa-calendar"></span></a></li>-->
 
 
   
