add bookingkit checkout footer generator into every pages

--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_passfotorosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_passfotorosenheim.html
@@ -108,7 +108,7 @@ fbq('track', 'ViewContent');
 
       -->
       <div class="col s12 m6 image_wrapper">
-        <img class="responsive-img" src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_01.jpg" alt="batchfield fotograf rosenheim passfoto 01.jpg">
+        <img class="responsive-img" src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_4x.png" alt="batchfield fotograf rosenheim passfoto 01.jpg">
       </div>
   
       
