--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_sedcardrosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_sedcardrosenheim.html
@@ -310,6 +310,10 @@ fbq('track', 'ViewContent');
 <!-- endbuild -->
 
 
+<!-- bookingkit script -->
+  <script src="https://eu5.bookingkit.de/bkscript.js.php?v=8773e446775d3a50b984f4b3313d5a29&lang=de&t=Default"></script>
+
+
 
 
 </body>
