--- a/projs/batchfield/app/fotoshootings_preise/index.html
+++ b/projs/batchfield/app/fotoshootings_preise/index.html
@@ -457,7 +457,7 @@ fbq('track', 'ViewContent');
                       <div class="card">
                         <div class="card-image">
                           <a class="light-box-wrapper" href="/fotoshootings_preise/fotostudio_passfotorosenheim.html">
-                            <img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_01.jpg">                            
+                            <img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_01.jpg">                          
                              <span class="card-price-wrapper">
                               <div class="text-wrapper">
                                 <p class="card-price">10€</p>
@@ -584,7 +584,7 @@ fbq('track', 'ViewContent');
                       <div class="card">
                         <div class="card-image">
                           <a class="light-box-wrapper" href="/fotoshootings_preise/fotostudio_passfotorosenheim.html">
-                            <img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_01.jpg">                            
+                            <img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_01.jpg">                          
                             <div class="overlay_background">
                               <div class="overlay_title">Passbilder</div>
                             </div>
@@ -816,19 +816,10 @@ fbq('track', 'ViewContent');
 
 <!-- endbuild -->
 
-<script>
-
-  
-
- 
 
 
-  
-    
-
-
-
-</script>
+<!-- bookingkit script -->
+  <script src="https://eu5.bookingkit.de/bkscript.js.php?v=8773e446775d3a50b984f4b3313d5a29&lang=de&t=Default"></script>
 
 
 
