--- a/projs/batchfield/app/kontakt/index.html
+++ b/projs/batchfield/app/kontakt/index.html
@@ -345,7 +345,8 @@ fbq('track', 'ViewContent');
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyjWWsL826rlfihBr7FvKCepMiKjn1IeI&callback=initMap"
         async defer></script>
 
-
+<!-- bookingkit script -->
+  <script src="https://eu5.bookingkit.de/bkscript.js.php?v=8773e446775d3a50b984f4b3313d5a29&lang=de&t=Default"></script>
 
        
 
