--- a/projs/batchfield/app/datenschutz/index.html
+++ b/projs/batchfield/app/datenschutz/index.html
@@ -442,6 +442,8 @@ widerrufen , etwa über den „Austragen“-Link im Newsletter.</P>
 <!-- endbuild -->
 
 
+<!-- bookingkit script -->
+  <script src="https://eu5.bookingkit.de/bkscript.js.php?v=8773e446775d3a50b984f4b3313d5a29&lang=de&t=Default"></script>
 
 </body>
 </html>
