--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_valentinstag_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_valentinstag_rosenheim.html
@@ -326,6 +326,10 @@ Das schönste ist Zeit miteinander zu verbringen</br>ihr könnt etwas ganz beson
 <!-- endbuild -->
 
 
+<!-- bookingkit script -->
+  <script src="https://eu5.bookingkit.de/bkscript.js.php?v=8773e446775d3a50b984f4b3313d5a29&lang=de&t=Default"></script>
+
+
 
 </body>
 </html>
