--- a/projs/batchfield/app/impressum/index.html
+++ b/projs/batchfield/app/impressum/index.html
@@ -272,6 +272,9 @@ Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</P>
 <!-- endbuild -->
 
 
+<!-- bookingkit script -->
+  <script src="https://eu5.bookingkit.de/bkscript.js.php?v=8773e446775d3a50b984f4b3313d5a29&lang=de&t=Default"></script>
+
 
 </body>
 </html>
