--- a/projs/batchfield/app/index.html
+++ b/projs/batchfield/app/index.html
@@ -520,7 +520,7 @@ fbq('track', 'ViewContent');
                       <div class="card">
                         <div class="card-image">
                           <a class="light-box-wrapper" href="/fotoshootings_preise/fotostudio_passfotorosenheim.html">
-                            <img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_01.jpg">                            
+                            <img src="/images/passfoto/batchfield_fotograf_rosenheim_passfoto_01.jpg">                          
                              <span class="card-price-wrapper">
                               <div class="text-wrapper">
                                 <p class="card-price">10€</p>
@@ -867,6 +867,9 @@ in einem sehr verliebten Fotoshooting.</h5>
   <script src="/scripts/jssocials/jssocials_activate.js"></script> -->
 <!-- endbuild -->
   
+  
+<!-- bookingkit script -->
+  <script src="https://eu5.bookingkit.de/bkscript.js.php?v=8773e446775d3a50b984f4b3313d5a29&lang=de&t=Default"></script>
 
 
 
