--- a/projs/batchfield/app/online_gutschein/online_gutschein.html
+++ b/projs/batchfield/app/online_gutschein/online_gutschein.html
@@ -333,6 +333,26 @@ fbq('track', 'ViewContent');
   <script src="https://eu5.bookingkit.de/bkscript.js.php?v=8773e446775d3a50b984f4b3313d5a29&lang=de&t=Default"></script>
 
 
+  <script>
+
+   
+
+    var refreshId = setInterval( function() {
+        var $titleArray = $('.alphaColor');
+        if($titleArray.length > 2){
+          for (var i = 0 ; i < $titleArray.length; i++){
+            var $imageWrapper = $($titleArray[i]).parent().prev();
+            $($titleArray[i]).prependTo($imageWrapper);  
+          };
+           clearInterval(refreshId);
+        }
+    }, 100);
+
+
+</script>
+
+
+
 
 
 
