opimize gutschein overview page layout

--- a/projs/batchfield/app/online_gutschein/online_gutschein.html
+++ b/projs/batchfield/app/online_gutschein/online_gutschein.html
@@ -201,9 +201,15 @@ fbq('track', 'ViewContent');
 
 <div style="height:105px"></div>
 
+
+<section class="gutschein-overview-section">
+  <div class="container gutschein-overview-container">
+    <h3 class='light-blue-text'>Beliebtest Gutscheine für <span>Fotoshootings</span></h3>
+  </div>
+</section>
+
+
 <!--  START OF bookingkit block -->  
-
-
 <div class="container">  
     <div id="bookingKitContainer"></div>
 </div> 
