update impressum and datenschutz

--- a/projs/batchfield/app/fotoshootings_preise/fotostudio_besfriendsfotograf_rosenheim.html
+++ b/projs/batchfield/app/fotoshootings_preise/fotostudio_besfriendsfotograf_rosenheim.html
@@ -158,7 +158,7 @@ fbq('track', 'ViewContent');
       </div>
    </div><!--row-->
   </div><!-- class="container topic_detail"-->
-<</section><!--section-->
+</section><!--section-->
 
 
 
