--- a/projs/batchfield/app/impressum/index.html
+++ b/projs/batchfield/app/impressum/index.html
@@ -45,7 +45,7 @@ fbq('track', 'ViewContent');
 </script>
 <body>
 
-<div class="section preloader-big-wrapper valign-wrapper">
+<!-- <div class="section preloader-big-wrapper valign-wrapper">
   <div class="preloader-wrapper big active">
     <div class="spinner-layer spinner-blue-only">
       <div class="circle-clipper left">
@@ -57,7 +57,7 @@ fbq('track', 'ViewContent');
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 
 
@@ -98,119 +98,10 @@ fbq('track', 'ViewContent');
       <div class="col s12 m9">
         <article>
          <div class="body_impressum">
-<h3>Impressum</h3>
-<P><BR>
-</P>
-<h3>Angaben
-gemäß § 5 TMG:</h3>
-<P>Inhaber:
-Bastian Stapelfeldt</P>
-<P><BR>
-</P>
-<P>BATCHFIELD
-| photography</P>
-<P>Hammerweg
-8</P>
-<P>Loftstudio
-im Hinterhof</P>
-<P>83022
-Rosenheim</P>
-<P><BR>
-</P>
-<h3>Kontakt:</h3>
-
-<TABLE WIDTH=1153 BORDER=3 BORDERCOLOR="#ffffff" CELLPADDING=8 CELLSPACING=0 FRAME=HSIDES>
-
-<div>
-  <p style="display:inline">Telephone</p>
-  <a href="tel:+49-08031-8878777">08031 8878777</a>
-
-</div>
-<div>
-  <p style="display:inline;">E-Mail:</p>
-  <a href="mailto:hello@batchfield.de">hello@batchfield.de</a>
-</div>
-</TABLE>
-
-<br>
-<br>
-<br>
-
-
-
-
-
-
-
-<h3>Umsatzsteuer-ID:</h3>
-<P>Umsatzsteuer-Identifikationsnummer
-gemäß §27 a Umsatzsteuergesetz: DE815282936</P>
-<P><BR>
-</P>
-<h3>Kammerzugehörigkeit:
-
-</h3>
-<P>Fotograf
-(HWK) Handwerkskammer für München und Oberbayern 
-</P>
-<P><A NAME="_GoBack"></A>
-<BR>
-</P>
-<h3>Hinweis
-auf EU-Streitschlichtung</h3>
-<P>Die
-Europäische Kommission stellt eine Plattform zur
-Online-Streitbeilegung (OS) bereit: <A HREF="http://ec.europa.eu/consumers/odr"><U>http://ec.europa.eu/consumers/odr</U></A></P>
-<P>Unsere
-E-Mail-Adresse finden sie oben im Impressum.</P>
-<P>&nbsp;</P>
-<P>&nbsp;</P>
-<P>Quelle:
-<A HREF="https://www.e-recht24.de/impressum-generator.html"><I><U>https://www.e-recht24.de</U></I></A></P>
-<h3>Haftungsausschluss
-(Disclaimer)</h3>
-<P><B>Haftung
-für Inhalte</B></P>
-<P>Als
-Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte
-auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach
-§§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht
-verpflichtet, übermittelte oder gespeicherte fremde Informationen zu
-überwachen oder nach Umständen zu forschen, die auf eine
-rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung
-oder Sperrung der Nutzung von Informationen nach den allgemeinen
-Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist
-jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten
-Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden
-Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</P>
-<P><B>Haftung
-für Links</B></P>
-<P>Unser
-Angebot enthält Links zu externen Webseiten Dritter, auf deren
-Inhalte wir keinen Einfluss haben. Deshalb können wir für diese
-fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der
-verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der
-Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der
-Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige
-Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine
-permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch
-ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar.
-Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links
-umgehend entfernen.</P>
-<P><B>Urheberrecht</B></P>
-<P>Die
-durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen
-Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung,
-Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der
-Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des
-jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite
-sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
-Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt
-wurden, werden die Urheberrechte Dritter beachtet. Insbesondere
-werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie
-trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten
-wir um einen entsprechenden Hinweis. Bei Bekanntwerden von
-Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</P>
+<div class="w-richtext"><h3><strong>Impressum&nbsp;</strong></h3><p><strong>Angaben gemäß § 5 TMG</strong></p><p>BATCHFIELD GmbH<br>Ludwigsplatz 14<br>83022 Rosenheim</p><p>Vertreten durch Bastian Stapelfeldt, Inhaber &amp; Geschäftsführer
+</p><p>&zwj;</p><p><strong>Kontakt</strong></p><p>E-Mail: hello@batchfield.de<br>Telefon Studio: 08031 / 88 78 777<br>Telefax: 08031 / 88 78 775</p><p>&zwj;</p><p><strong>Registereintrag:
+</strong></p><p>Eintragung im Handelsregister<br>Registergericht: AG Traunstein<br>Registernummer: HRB 25765<br><br>Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz:
+DE311049355</p><p>Berufsbezeichnung: Fotograf<br>Zuständige Kammer: Handwerkskammer München &amp; Oberbayern (HWK)<br>Berufsrechtliche Regelungen einsehbar unter: http://www.hwk-muenchen.de</p><p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:&nbsp;<a href="http://ec.europa.eu/consumers/odr">http://ec.europa.eu/consumers/odr<br><br></a>Unsere E-Mail-Adresse finden Sie oben im Impressum.<br>Wir sind nicht verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p><p>&zwj;</p><p>&zwj;</p><h3>Haftungsausschluss</h3><p><strong>Haftung für Inhalte</strong></p><p>Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.<br><br></p><p><strong>Haftung für Links</strong></p><p>Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</p><p>&zwj;</p><p><strong>Urheberrecht</strong></p><p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattetSoweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p><p>Quelle: https://www.e-recht24.de/impressum-generator.html</p><p>&zwj;</p><p>&zwj;</p><p>&zwj;</p></div>
 
 
 
